--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -66,3 +66,30 @@ jobs:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-password-rotation.yml@main
     with:
       TargetEnvironment: ${{ matrix.TargetEnvironment }}
+
+
+  # If the GHA fails during calculation of the scheduling matrix we will not have configured
+  # any specific environment to use yet, so we default to running the failure notification from
+  # the development environment (this is arbitrary)
+  setup-notification-failure-slack:
+    if: failure()
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
+    needs: [prepare-run-matrix]
+    environment: "delius-core-dev-preapproved"
+    steps:
+
+      - name: Checkout Local Repo to get Composite Action
+        uses: actions/checkout@v5
+
+      - name: Send Slack Failure Notification
+        id: foreground_slack_notification
+        uses: ./.github/actions/send-slack-notification
+        env:
+            AWS_ACCOUNT_ID: "${{ vars.AWS_ACCOUNT_ID }}"
+        with:
+          Emoji: ":github-red:"
+          TextHeader: "Password Rotation Job Scheduling Failure"
+          TextBody: ":cross-red: Password rotation job could not be scheduled"
+          TargetHost: "GHA Runner"
